--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,13 @@
 ﻿{
-  "name": "Douban.Hack",
+  "name": "Douban.FM.Hack",
   "version": "0.1.0",
   "manifest_version": 2,
-  "description": "Hack for douban.fm",
+  "description": "Unofficial extension for douban.fm",
   "permissions": ["http://*/*", "https://*/*"],
+  "icons" : {
+    "48" : "assets/icon-48.png",
+    "128" : "assets/icon-128.png"
+  },
   "content_scripts":
   [
     {
